--- a/src/App/AppBundle/Resources/views/Default/index.html.twig
+++ b/src/App/AppBundle/Resources/views/Default/index.html.twig
@@ -1,1 +1,14 @@
-GRACIAS SOL!!!!!!!
+{% extends '::base.html.twig' %}
+{% block stylesheets %}
+    
+{% endblock %}
+
+{% block body %}
+    <div class="container-fluid">
+    	<div class="row">
+    		<div class="top">
+    			<img src="{{asset('bundles/app/images/primera.jpg')}}" alt="Sabri y Alexis">
+    		</div>
+    	</div>
+    </div>
+{% endblock %}
