--- a/src/App/AppBundle/Resources/views/Default/index.html.twig
+++ b/src/App/AppBundle/Resources/views/Default/index.html.twig
@@ -1,6 +1,7 @@
 {% extends '::base.html.twig' %}
 {% block stylesheets %}
-    
+    <link rel="stylesheet" href="{{asset('bundles/app/css/styles.css')}}">
+    <link rel="stylesheet" href="{{asset('bundles/app/css/styles.css.map')}}">
 {% endblock %}
 
 {% block body %}
@@ -12,3 +13,4 @@
     	</div>
     </div>
 {% endblock %}
+
