--- a/src/App/AppBundle/Resources/public/css/style.css
+++ b/src/App/AppBundle/Resources/public/css/style.css
@@ -1,2 +1,2 @@
-.preba{color:black}
+.top{position:relative;max-height:600px;overflow:hidden}.top img{margin-top:-60px;width:100%}
 /*# sourceMappingURL=style.css.map */
