--- a/src/App/AppBundle/Resources/public/css/style.css
+++ b/src/App/AppBundle/Resources/public/css/style.css
@@ -1,2 +1,2 @@
-.top{position:relative;max-height:600px;overflow:hidden}.top img{margin-top:-60px;width:100%}
+.top{position:relative;max-height:600px;overflow:hidden}.top img{margin-top:-60px;width:100%}.top #countdown{position:absolute;bottom:50px;left:70px;font-size:30px}
 /*# sourceMappingURL=style.css.map */
