--- a/src/App/AppBundle/Resources/public/sass/style.scss
+++ b/src/App/AppBundle/Resources/public/sass/style.scss
@@ -6,4 +6,12 @@
 		margin-top: -60px;
 		width:100%;
 	}
+	#countdown{
+		position:absolute;
+		bottom: 50px;
+		left: 70px;
+		font-size: 30px;
+	}
+
 }
+
