--- a/src/App/AppBundle/Resources/public/sass/style.scss
+++ b/src/App/AppBundle/Resources/public/sass/style.scss
@@ -1,17 +1,63 @@
+/*fonts*/
+@font-face {
+    font-family: 'futura-light';
+    src: url('../fonts/futura_light_bt-webfont.woff2') format('woff2'),
+         url('../fonts/futura_light_bt-webfont.woff') format('woff');
+    font-weight: normal;
+    font-style: normal;
+}
+@font-face {
+    font-family: 'prototype';
+    src: url('../fonts/prototype-webfont.woff2') format('woff2'),
+         url('../fonts/prototype-webfont.woff') format('woff');
+    font-weight: normal;
+    font-style: normal;
+}
+@font-face {
+    font-family: 'Futura';
+    src: url('../fonts/futumd__-webfont.woff2') format('woff2'),
+         url('../fonts/futumd__-webfont.woff') format('woff');
+    font-weight: normal;
+    font-style: normal;
+}
+
+ 
 .top{
 	position: relative;
-	max-height: 600px;
+	max-height: 640px;
 	overflow: hidden;
 	img{
 		margin-top: -60px;
 		width:100%;
 	}
-	#countdown{
+	.contCount{
 		position:absolute;
-		bottom: 50px;
-		left: 70px;
+		bottom: 0px;
+		left: 0px;
+		padding: 0 10%;
+		width:100%;
+		background: rgba(255,255,255,.8);
 		font-size: 30px;
+		.titleCount{
+			color: black;
+			font-family: 'futura-light';
+			font-size: 25px;
+			padding: 40px 0px;
+			margin: 0;
+		}
+		#countdown{
+			font-family: 'Abril Fatface';
+			span{
+				width: 25%;
+				font-size: 45px;
+				padding: 10px 0;
+				b{
+					display: block;
+					width: 100%;
+					font-size: 15px;
+				}
+			}
+		}
 	}
-
 }
 
