--- a/src/App/AppBundle/Resources/public/sass/style.scss
+++ b/src/App/AppBundle/Resources/public/sass/style.scss
@@ -1,3 +1,4 @@
+@import 'modules/vars';
 /*fonts*/
 @font-face {
     font-family: 'futura-light';
@@ -56,6 +57,64 @@
 					width: 100%;
 					font-size: 15px;
 				}
+			}
+		}
+	}
+	.welcome{
+		position: absolute;
+		right: 5%;
+		top: 10%;
+		.sya{
+			width:100% ;
+			p{
+				font-family: 'Sacramento';
+				color: white;
+				text-align: center;
+				// padding: 10px 0;
+				// font-weight: bold;
+				font-size: 50px;
+			}
+			p:before{
+				background-image:url('../images/line01.png');
+			    background-size: 100%;
+			    width: 100%;
+			    height: 2px; 
+			    content: "";
+			    bottom: 0; 
+			    float: left;
+			    left: 0;
+			    background-repeat: no-repeat;
+			}
+			p:after{
+				background-image:url('../images/line01.png');
+			 	background-size: 100%;
+			    width: 100%;
+			    height: 2px;
+			    content: "";
+			    top: 0;
+			    float: left;
+			    left: 0;
+			    background-repeat: no-repeat;
+			}
+		}
+		.invitacion{
+			font-family: 'Futura';
+			font-size:25px;
+			color:black;
+			margin: 15px 0;
+			text-align:center;
+			span{
+				display:block;
+				font-size: 30px;
+			}
+		}
+		.ctaConfirm{
+			a{
+				padding: 10px;
+				color: white;
+				background:$color1;
+				border-radius: 13px;
+				font-family: 'helvetica';
 			}
 		}
 	}
