--- a/src/App/AppBundle/Resources/views/Default/index.html.twig
+++ b/src/App/AppBundle/Resources/views/Default/index.html.twig
@@ -20,6 +20,21 @@
     					</div>
     				</div>
     			</div>
+    			<div class="welcome col-md-3">
+	    			<div class="row">
+	    				<div class="sya col-md-12">
+	    					<p>Sabri y Alexis</p>
+	    				</div>
+	    				<div class="invitacion col-md-12">
+	    					<p>Hola Sol y Fer <br> queremos invitarlos a <span>¡nuestro casamiento!</span></p>
+	    				</div>
+	    				<div class="ctaConfirm col-md-12">
+	    					<a href="#" class="col-md-6 col-md-offset-3 text-center">
+	    						¿Confirman asistencia?
+	    					</a>
+	    				</div>
+	    			</div>
+    			</div>
     		</div>
     	</div>
     </div>
