maq superior ok

--- a/src/App/AppBundle/Resources/public/sass/style.scss
+++ b/src/App/AppBundle/Resources/public/sass/style.scss
@@ -117,6 +117,14 @@
 				font-family: 'helvetica';
 			}
 		}
+		.down{
+			.glyphicon{
+				margin-top: 50px;
+			    font-size: 40px;
+			    color: black;
+			    font-weight: lighter;
+			}
+		}
 	}
 }
 
