--- a/src/App/AppBundle/Resources/views/Default/index.html.twig
+++ b/src/App/AppBundle/Resources/views/Default/index.html.twig
@@ -33,6 +33,7 @@
 	    						¿Confirman asistencia?
 	    					</a>
 	    				</div>
+						<a href="" class="down col-md-12 text-center"><span class="glyphicon glyphicon-menu-down"></span></a>
 	    			</div>
     			</div>
     		</div>
