--- a/src/App/AppBundle/Resources/public/sass/style.scss
+++ b/src/App/AppBundle/Resources/public/sass/style.scss
@@ -165,6 +165,15 @@
 }
 .ubicaciones{
 	background:$color1;
-	height: 500px;
+	height: 300px;
 
+}
+.phrase{
+    font-size: 20px;
+    font-weight: 400;
+    line-height: 28px;
+    color: white;
+}
+.titlePhrase{
+    color: white;
 }
