--- a/src/App/AppBundle/Resources/views/Default/index.html.twig
+++ b/src/App/AppBundle/Resources/views/Default/index.html.twig
@@ -30,7 +30,7 @@
                         </div>
                         <div class="ctaConfirm col-md-12">
                             <a href="#" class="col-md-6 col-md-offset-3 text-center">
-                                    ¿Confirman asistencia?
+                                ¿Confirman asistencia?
                             </a>
                         </div>
                         <a href="" class="down col-md-12 text-center"><span class="glyphicon glyphicon-menu-down"></span></a>
@@ -38,24 +38,24 @@
                 </div>
             </section>
             <section class="menu container">
-                <div class="row">
+                <div class="col-md-8 col-md-offset-2">
                     <div class="col-md-6">
                         <a href="#">
                             <p class="title col-sm-12 text-center">La Iglesia</p>
                             <img src="{{asset('bundles/app/images/menu01.png')}}" alt="">
                         </a>
-                        <p class="title col-sm-12 text-center">Basílica del Sagrado Corazón de Jesús</p>
+                      <!--   <p class="title col-sm-12 text-center">Basílica del Sagrado Corazón de Jesús</p>
                         <p class="title col-sm-12 text-center">Av. Velez Sarsfield 1351</p>
-                        <p class="title col-sm-12 text-center">20:30 hs.</p>
+                        <p class="title col-sm-12 text-center">20:30 hs.</p> -->
                     </div>
                     <div class="col-md-6">
                             <a href="#">
                                 <p class="title col-sm-12 text-center">La Fiesta</p>
                                 <img src="{{asset('bundles/app/images/menu02.png')}}" alt="">
                             </a>
-                            <p class="title col-sm-12 text-center">Calima Eventos</p>
+                          <!--   <p class="title col-sm-12 text-center">Calima Eventos</p>
                             <p class="title col-sm-12 text-center">Olga Cossettini 830, Buenos Aires</p>
-                            <p class="title col-sm-12 text-center">22:00 hs.</p>
+                            <p class="title col-sm-12 text-center">22:00 hs.</p> -->
                     </div>                                
                     {#<div class="col-md-4">
                             <a href="#">
@@ -63,6 +63,11 @@
                                     <img src="{{asset('bundles/app/images/menu03.png')}}" alt="">
                             </a>
                     </div>#}                                
+                </div>
+            </section>
+            <section class="col-sm-12 confirmAsist">            
+                <div class="row background">    
+                        
                 </div>
             </section>
             <section class="col-sm-12 ubicaciones">	
