--- a/src/App/AppBundle/Resources/public/css/style.css
+++ b/src/App/AppBundle/Resources/public/css/style.css
@@ -1,144 +1,2 @@
-/*fonts*/
-@font-face {
-  font-family: 'futura-light';
-  src: url("../fonts/futura_light_bt-webfont.woff2") format("woff2"), url("../fonts/futura_light_bt-webfont.woff") format("woff");
-  font-weight: normal;
-  font-style: normal; }
-@font-face {
-  font-family: 'prototype';
-  src: url("../fonts/prototype-webfont.woff2") format("woff2"), url("../fonts/prototype-webfont.woff") format("woff");
-  font-weight: normal;
-  font-style: normal; }
-@font-face {
-  font-family: 'Futura';
-  src: url("../fonts/futumd__-webfont.woff2") format("woff2"), url("../fonts/futumd__-webfont.woff") format("woff");
-  font-weight: normal;
-  font-style: normal; }
-.top {
-  position: relative;
-  max-height: 640px;
-  overflow: hidden; }
-  .top img {
-    margin-top: -60px;
-    width: 100%; }
-  .top .contCount {
-    position: absolute;
-    bottom: 0px;
-    left: 0px;
-    padding: 0 10%;
-    width: 100%;
-    background: rgba(255, 255, 255, 0.8);
-    font-size: 30px; }
-    .top .contCount .titleCount {
-      color: black;
-      font-family: 'futura-light';
-      font-size: 25px;
-      padding: 40px 0px;
-      margin: 0; }
-    .top .contCount #countdown {
-      font-family: 'Abril Fatface'; }
-      .top .contCount #countdown span {
-        width: 25%;
-        font-size: 45px;
-        padding: 10px 0; }
-        .top .contCount #countdown span b {
-          display: block;
-          width: 100%;
-          font-size: 15px; }
-  .top .welcome {
-    position: absolute;
-    right: 5%;
-    top: 10%; }
-    .top .welcome .sya {
-      width: 100%; }
-      .top .welcome .sya p {
-        font-family: 'Sacramento';
-        color: white;
-        text-align: center;
-        font-size: 50px; }
-      .top .welcome .sya p:before {
-        background-image: url("../images/line01.png");
-        background-size: 100%;
-        width: 100%;
-        height: 2px;
-        content: "";
-        bottom: 0;
-        float: left;
-        left: 0;
-        background-repeat: no-repeat; }
-      .top .welcome .sya p:after {
-        background-image: url("../images/line01.png");
-        background-size: 100%;
-        width: 100%;
-        height: 2px;
-        content: "";
-        top: 0;
-        float: left;
-        left: 0;
-        background-repeat: no-repeat; }
-    .top .welcome .invitacion {
-      font-family: 'Futura';
-      font-size: 25px;
-      color: black;
-      margin: 15px 0;
-      text-align: center; }
-      .top .welcome .invitacion span {
-        display: block;
-        font-size: 30px; }
-    .top .welcome .ctaConfirm a {
-      font-size: 17px;
-      padding: 10px;
-      color: white;
-      background: #ffcc66;
-      border-radius: 13px;
-      font-family: 'helvetica'; }
-    .top .welcome .down .glyphicon {
-      margin-top: 50px;
-      font-size: 40px;
-      color: black;
-      font-weight: lighter; }
-
-.menu {
-  padding: 15px 0; }
-  .menu a {
-    text-align: center;
-    float: left;
-    overflow: hidden;
-    transition: all .7s; }
-    .menu a .title {
-      padding: 0;
-      margin: 0;
-      font-size: 40px;
-      color: #ffcc66;
-      font-family: 'Great Vibes'; }
-    .menu a img {
-      width: 70%;
-      margin: 0 auto; }
-    .menu a:after {
-      background-image: url("../images/line02.png");
-      background-size: 70%;
-      width: 100%;
-      content: "";
-      bottom: 0px;
-      float: left;
-      left: 0;
-      background-repeat: no-repeat;
-      background-position: center;
-      height: 60px; }
-    .menu a:hover {
-      opacity: .7; }
-
-.ubicaciones {
-  background: #ffcc66;
-  height: 300px; }
-
-.phrase {
-  font-size: 20px;
-  font-weight: 400;
-  line-height: 28px;
-  color: white; }
-
-.titlePhrase {
-  color: white; }
-
+@font-face{font-family:'futura-light';src:url("../fonts/futura_light_bt-webfont.woff2") format("woff2"),url("../fonts/futura_light_bt-webfont.woff") format("woff");font-weight:normal;font-style:normal}@font-face{font-family:'prototype';src:url("../fonts/prototype-webfont.woff2") format("woff2"),url("../fonts/prototype-webfont.woff") format("woff");font-weight:normal;font-style:normal}@font-face{font-family:'Futura';src:url("../fonts/futumd__-webfont.woff2") format("woff2"),url("../fonts/futumd__-webfont.woff") format("woff");font-weight:normal;font-style:normal}.top{position:relative;max-height:640px;overflow:hidden}.top img{margin-top:-60px;width:100%}.top .contCount{position:absolute;bottom:0px;left:0px;padding:0 10%;width:100%;background:rgba(255,255,255,0.8);font-size:30px}.top .contCount .titleCount{color:black;font-family:'futura-light';font-size:25px;padding:40px 0px;margin:0}.top .contCount #countdown{font-family:'Abril Fatface'}.top .contCount #countdown span{width:25%;font-size:45px;padding:10px 0}.top .contCount #countdown span b{display:block;width:100%;font-size:15px}.top .welcome{position:absolute;right:5%;top:10%}.top .welcome .sya{width:100%}.top .welcome .sya p{font-family:'Sacramento';color:white;text-align:center;font-size:50px}.top .welcome .sya p:before{background-image:url("../images/line01.png");background-size:100%;width:100%;height:2px;content:"";bottom:0;float:left;left:0;background-repeat:no-repeat}.top .welcome .sya p:after{background-image:url("../images/line01.png");background-size:100%;width:100%;height:2px;content:"";top:0;float:left;left:0;background-repeat:no-repeat}.top .welcome .invitacion{font-family:'Futura';font-size:25px;color:black;margin:15px 0;text-align:center}.top .welcome .invitacion span{display:block;font-size:30px}.top .welcome .ctaConfirm a{font-size:17px;padding:10px;color:white;background:#fc6;border-radius:13px;font-family:'helvetica'}.top .welcome .down .glyphicon{margin-top:50px;font-size:40px;color:black;font-weight:lighter}.menu{padding:15px 0}.menu a{text-align:center;float:left;overflow:hidden;transition:all .7s}.menu a .title{padding:0;margin:0;font-size:40px;color:#fc6;font-family:'Great Vibes'}.menu a img{width:70%;margin:0 auto}.menu a:after{background-image:url("../images/line02.png");background-size:70%;width:100%;content:"";bottom:0px;float:left;left:0;background-repeat:no-repeat;background-position:center;height:60px}.menu a:hover{opacity:.7}.ubicaciones{background:#fc6;height:300px}.confirmAsist{background:black;height:560px;z-index:-11}.confirmAsist .background{position:absolute;top:0;left:0;height:100%;width:100%;background:url("../images/confirmAsist.jpg");background-repeat:no-repeat;background-size:100%;opacity:.5;z-index:-10}.confirmAsist .text{margin:0 auto;width:60%}.confirmAsist .text h2{float:none;font-size:45px;padding:60px 0 0;margin:0;color:white;font-family:'futura-light'}.confirmAsist .text img{margin-top:10px;width:50%}.confirmAsist .Cta{margin:10% auto 0 auto;background:rgba(255,204,102,0.8);border-radius:13px;overflow:hidden;width:30%;padding:20px}.confirmAsist .Cta .btnConfirm{color:white;margin:0 auto;font-family:'futura-light';text-align:center;font-size:35px}.phrase{font-size:20px;font-weight:400;line-height:28px;color:white}.titlePhrase{color:white}
 /*# sourceMappingURL=style.css.map */
