--- a/src/App/AppBundle/Resources/views/Default/index.html.twig
+++ b/src/App/AppBundle/Resources/views/Default/index.html.twig
@@ -66,18 +66,23 @@
                 </div>
             </section>
             <section class="col-sm-12 confirmAsist">            
-                <div class="row background">    
-                        
+                <div class="row background"></div>
+                <div class="container text-center">
+                <div class="text">
+                    <h2 class="">Queremos que compartas este momento con nosotros</h2>
+                    <img src="{{asset('bundles/app/images/line03.png')}}" alt="">
+                </div> 
+                <div class="Cta">
+                    <a class="btnConfirm" href="">Confirmá  <br>  tu asistencia</a>
                 </div>
+                </div> 
             </section>
             <section class="col-sm-12 ubicaciones">	
                 <div class="row">	
                     <div class="col-md-12 text-center">	
                         <h2 class="titlePhrase">¿QUERÉS HACERNOS UN REGALO?</h2>
-                        <br/>
                         <div class="info">             
-                            <div class="phrase"><p>Para nosotros lo más importante es tu presencia, pero si algo 
-                                    nos quieres obsequiar, con dinero lo sabremos apreciar.</p>
+                            <div class="phrase"><p>Para nosotros lo más importante es tu presencia, pero si algo nos quieres obsequiar, con dinero lo sabremos apreciar.</p>
                             <br/>
                             BANCO 123321456654 <br/>
                             CBU 1324354657687980. <br/>
