--- a/src/App/AppBundle/Resources/views/Default/index.html.twig
+++ b/src/App/AppBundle/Resources/views/Default/index.html.twig
@@ -77,16 +77,28 @@
                 </div>
                 </div> 
             </section>
-            <section class="col-sm-12 ubicaciones">	
-                <div class="row">	
-                    <div class="col-md-12 text-center">	
-                        <h2 class="titlePhrase">¿QUERÉS HACERNOS UN REGALO?</h2>
-                        <div class="info">             
-                            <div class="phrase"><p>Para nosotros lo más importante es tu presencia, pero si algo nos quieres obsequiar, con dinero lo sabremos apreciar.</p>
-                            <br/>
-                            BANCO 123321456654 <br/>
-                            CBU 1324354657687980. <br/>
+            <section class="col-md-12 regalo">
+                <div class="row">
+                    <div class="col-md-4">
+                        <div class="row">
+                            <img src="{{asset('bundles/app/images/regalo.jpg')}}" class="img-responsive" alt="">
+                        </div>
+                    </div>
+                    <div class="col-md-7 infoBco text-center">
+                        <img src="{{asset('bundles/app/images/line02.png')}}" alt="">
+                        <h2 class="titlePhrase">¿Querés hacernos un regalo?</h2>
+                            <div class="phrase">
+                                <p>Para nosotros lo más importante es tu presencia, pero si algo nos quieres obsequiar, con dinero lo sabremos apreciar.</p>
+                                <span>Banco Francés 123321456654 </span>
+                                <span>CBU 1324354657687980. </span>
                             </div>
+                        <img src="{{asset('bundles/app/images/line02.png')}}" alt="">
+                    </div>
+                </div>
+            </section>
+            <section class="col-sm-12 ubicaciones"> 
+                <div class="row">   
+                    <div class="col-md-12 text-center"> 
                            {#-El regalo es opcional,la asistencia obligatoria. 
                             Pero si queres tener un detalle con nosotros qué mejor regalo 
                             que una ayudita para nuestra luna de miel.<br/>
