--- a/src/App/AppBundle/Resources/views/Default/index.html.twig
+++ b/src/App/AppBundle/Resources/views/Default/index.html.twig
@@ -8,7 +8,7 @@
     	<div class="row">
             <section class="top">
                 <img src="{{asset('bundles/app/images/primera.jpg')}}" alt="Sabri y Alexis">
-                <div class="row contCount">
+                <div class="contCount">
                     <div class="col-md-12">
                         <div class="row">
                                 <div class="col-md-5">
@@ -29,18 +29,18 @@
                             <p>Hola Sol y Fer <br> queremos invitarlos a <span>¡nuestro casamiento!</span></p>
                         </div>
                         <div class="ctaConfirm col-md-12">
-                            <a href="#" class="col-md-6 col-md-offset-3 text-center">
+                            <a href="#confirmAsist"  class="col-md-6 col-md-offset-3 text-center ancla">
                                 ¿Confirman asistencia?
                             </a>
                         </div>
-                        <a href="" class="down col-md-12 text-center"><span class="glyphicon glyphicon-menu-down"></span></a>
+                        <a href="#confirmAsist" class="down col-md-12 text-center ancla"><span class="glyphicon glyphicon-menu-down"></span></a>
                     </div>
                 </div>
             </section>
             <section class="menu container">
                 <div class="col-md-8 col-md-offset-2">
                     <div class="col-md-6">
-                        <a href="#">
+                        <a href="#ubicaciones" class="ancla">
                             <p class="title col-sm-12 text-center">La Iglesia</p>
                             <img src="{{asset('bundles/app/images/menu01.png')}}" alt="">
                         </a>
@@ -49,7 +49,7 @@
                         <p class="title col-sm-12 text-center">20:30 hs.</p> -->
                     </div>
                     <div class="col-md-6">
-                            <a href="#">
+                            <a href="#ubicaciones" class="ancla">
                                 <p class="title col-sm-12 text-center">La Fiesta</p>
                                 <img src="{{asset('bundles/app/images/menu02.png')}}" alt="">
                             </a>
@@ -65,7 +65,7 @@
                     </div>#}                                
                 </div>
             </section>
-            <section class="col-sm-12 confirmAsist">            
+            <section class="col-sm-12 confirmAsist" id="confirmAsist">            
                 <div class="row background"></div>
                 <div class="container text-center">
                 <div class="text">
@@ -91,35 +91,67 @@
                                 <p>Para nosotros lo más importante es tu presencia, pero si algo nos quieres obsequiar, con dinero lo sabremos apreciar.</p>
                                 <span>Banco Francés 123321456654 </span>
                                 <span>CBU 1324354657687980. </span>
+                               {#-El regalo es opcional,la asistencia obligatoria. 
+                                Pero si queres tener un detalle con nosotros qué mejor regalo 
+                                que una ayudita para nuestra luna de miel.<br/>
+                                
+                                -Nuestro mejor regalo es que estés con nosotros en nuestro día,
+                                pero si querés hacernos un obsequio, este es nuestro número de cuenta.
+                                <br/>
+                                
+                                - Ayudanos a pagarnos la luna de miel.
+                                <br/>
+                                - Que compartas este día tan importante con nosotros es un gran regalo..
+                                Pero si deseas que nuestros sueños se hagan realidad,
+                                puedes ayudarnos en este número de cuenta.
+                                <br/>
+                                -Tu presencia es nuestro mejor regalo pero si queres, podés contribuir 
+                                a hacer nuestra luna de miel innolvidable.
+                                <br/>#}
                             </div>
                         <img src="{{asset('bundles/app/images/line02.png')}}" alt="">
                     </div>
                 </div>
             </section>
-            <section class="col-sm-12 ubicaciones"> 
-                <div class="row">   
-                    <div class="col-md-12 text-center"> 
-                           {#-El regalo es opcional,la asistencia obligatoria. 
-                            Pero si queres tener un detalle con nosotros qué mejor regalo 
-                            que una ayudita para nuestra luna de miel.<br/>
-                            
-                            -Nuestro mejor regalo es que estés con nosotros en nuestro día,
-                            pero si querés hacernos un obsequio, este es nuestro número de cuenta.
-                            <br/>
-                            
-                            - Ayudanos a pagarnos la luna de miel.
-                            <br/>
-                            - Que compartas este día tan importante con nosotros es un gran regalo..
-                            Pero si deseas que nuestros sueños se hagan realidad,
-                            puedes ayudarnos en este número de cuenta.
-                            <br/>
-                            -Tu presencia es nuestro mejor regalo pero si queres, podés contribuir 
-                            a hacer nuestra luna de miel innolvidable.
-                            <br/>#}
+            <section class="col-sm-12 ubicaciones" id="ubicaciones"> 
+                <div class="container">   
+                    <div class="col-md-6 block text-center"> 
+                        <h2>La Iglesia</h2>
+                        <img src="{{asset('bundles/app/images/line03.png')}}" alt="" class="img-responsive">
+                        <div class="info">
+                            <p class="iglesia">Basílica del Sagrado Corazón de Jesús <br>Av. Velez Sarsfield 1351<br> Sábado 30 de Septiembre 20.30hs</p> 
                         </div>
+                        <a href="whatsapp://send?text=https://www.google.com.ar/maps/place/Basilica+del+Sagrado+Corazon+de+Jesus/@-34.6509379,-58.3923583,16.25z/data=!4m5!3m4!1s0x95bccb5c9be450e3:0x1f8fb272dc109536!8m2!3d-34.6510623!4d-58.3892193"><span class="fa fa-whatsapp"></span></a>
+                        <a href="mailto:?subject=Casamiento Sabri y Alexis&body=La ubicación de la Iglesia es https://www.google.com.ar/maps/place/Basilica+del+Sagrado+Corazon+de+Jesus/@-34.6509379,-58.3923583,16.25z/data=!4m5!3m4!1s0x95bccb5c9be450e3:0x1f8fb272dc109536!8m2!3d-34.6510623!4d-58.3892193">
+                        <span class="fa fa-envelope"></span></a>
+                        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d5519.894782891258!2d-58.3923583261413!3d-34.650937927127856!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x95bccb5c9be450e3%3A0x1f8fb272dc109536!2sBasilica+del+Sagrado+Corazon+de+Jesus!5e0!3m2!1ses!2sar!4v1499092221098" width="300" height="300" frameborder="0" style="border:0" allowfullscreen></iframe>
+
+                    </div>
+                    <div class="col-md-6 block text-center"> 
+                        <h2>La Fiesta</h2>
+                        <img src="{{asset('bundles/app/images/line03.png')}}" alt="" class="img-responsive">
+                        <div class="info">
+                            <p>Calima Eventos <br> Olga Cossettini 830, Buenos Aires <br> Sábado 30 de Septiembre 22.00hs <b>Etiqueta: Elegante</b></p>
+                        </div>
+                        <a href="whatsapp://send?text=https://www.google.com.ar/maps/place/Calima+Eventos/@-34.606039,-58.373266,15z/data=!4m5!3m4!1s0x95a3352ec5210079:0x51520efb5b86e335!8m2!3d-34.606761!4d-58.3637929"><span class="fa fa-whatsapp"></span></a>
+                        <a href="mailto:?subject=Casamiento Sabri y Alexis&body=La ubicación del salón es https://www.google.com.ar/maps/place/Calima+Eventos/@-34.606039,-58.373266,15z/data=!4m5!3m4!1s0x95a3352ec5210079:0x51520efb5b86e335!8m2!3d-34.606761!4d-58.3637929">
+                        <span class="fa fa-envelope"></span></a>
+                        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d12045.49276300984!2d-58.373265998183584!3d-34.60603900245349!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x95a3352ec5210079%3A0x51520efb5b86e335!2sCalima+Eventos!5e0!3m2!1ses!2sar!4v1499092163296" width="300" height="300" frameborder="0" style="border:0" allowfullscreen></iframe>
+
+                    </div>
                     </div>
                 </div>
             </section>
+
+            <footer>
+                <div class="row">
+                    <div class="saludo">
+                        <img src="{{asset('bundles/app/images/line03.png')}}" alt="" class="top img-responsive">
+                        <p>¡Los esperamos!</p>
+                        <img src="{{asset('bundles/app/images/line03.png')}}" alt="" class="img-responsive">
+                    </div>
+                </div>
+            </footer>
     	</div>                        
     </div>
 {% endblock %}
@@ -161,5 +193,14 @@
 		    	'<span style="float:left;text-align:center;" class="seconds">' + seconds + 
 		    		'<b style="font-size:15px;display:block;">segundos</b></span>';  	 
 		}, 1000);
+
+        $('.ancla').click(function(e){               
+            e.preventDefault();     //evitar el eventos del enlace normal
+            var strAncla=$(this).attr('href'); //id del ancla
+                $('body,html').stop(true,true).animate({                
+                    scrollTop: $(strAncla).offset().top
+                },1000);
+            
+        });
 	</script>
 {% endblock %}
