Se generan urls dinamicas

--- a/src/App/AppBundle/Resources/views/Default/index.html.twig
+++ b/src/App/AppBundle/Resources/views/Default/index.html.twig
@@ -26,7 +26,9 @@
                             <p>Sabri y Alexis</p>
                         </div>
                         <div class="invitacion col-md-12">
-                            <p>Hola Sol y Fer <br> queremos invitarlos a <span>¡nuestro casamiento!</span></p>
+                            <p>Hola 
+                            {{nombre}}
+                            <br> queremos invitarlos a <span>¡nuestro casamiento!</span></p>
                         </div>
                         <div class="ctaConfirm col-md-12">
                             <a href="#confirmAsist"  class="col-md-6 col-md-offset-3 text-center ancla">
