--- a/src/App/AppBundle/Resources/public/sass/style.scss
+++ b/src/App/AppBundle/Resources/public/sass/style.scss
@@ -1,4 +1,5 @@
 @import 'modules/vars';
+@import 'modules/mixins';
 /*fonts*/
 @font-face {
     font-family: 'futura-light';
@@ -64,6 +65,12 @@
 		right: 5%;
 		top: 10%;
 		.sya{
+                    @include tablet {
+                        background-color: red;
+                    }
+                    @include mobile {
+                        background-color: blue;
+                    }
 			width:100% ;
 			p{
 				font-family: 'Sacramento';
